- Bot should no longer fail to pick up items dropped by monsters that
  died a distance away.
- Don't spam "PvP On" over and over in PVP zones.
- Tk map viewer has been fixed.
- Make itemsTakeAuto_party count dmgFromYou too. (Hack to allow
  looting monsters that you killed without ever using attack ai_seq.)
- inInventory was not working at all since its last update.

New features:
- Better support for detecting dead players.
- Show player number with emoticons and public chat.
- Show distance with emoticons.
- The uneq command now supports item names.
- You can now specify multiple plugin directories on the commandline.
  Each directory is seperated by a ';' (on Windows) or a ':' (on Unix).
- target_dist range condition for monsters.
- "Player Exists:" and "Player Appeared:" messages moved to domain
  parseMsg_presence/player so you can put it in beepDomains.
- Server disconnections are now immediately detected.
- New command "talknpc <x> <y> <sequence>" for sending a sequence of
  commands to the NPC at <x> <y>. Useful in macros.
- Messages about other players being muted moved to parseMsg_statuslook
  domain with verbosity 2.
- "Unknown error 0" message changed to "Server shutting down".
- The "ignoreInvalidLogin" config option now also ignores incorrect password.
- Messages about other players parseMsg/hairColor and parseMsg/job moved
  to verbosity 2.
- Your account ID is now shown in readable base 10 form on login.
- The inInventory option now checks if you have all of the items in the list.

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.
- ai on
  ai off
  Turns AI on/off.
- card list
  List cards in your inventory.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel